cmake_minimum_required(VERSION 3.9)
project(LeetCodeCLion)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCodeCLion main.cpp ClimbingStairs/070/Solution070.cxx ClimbingStairs/070/Solution070.h ClimbingStairs/746/Solution746.cxx ClimbingStairs/746/Solution746.h Math/Solution069/Solution069.cxx Math/Solution069/Solution069.h String/Solution788/Solution788.cxx String/Solution788/Solution788.h String/Solution784/Solution784.cxx String/Solution784/Solution784.h CommonObjects/TreeNode.h Tree/Solution783/Solution783.cxx Tree/Solution783/Solution783.h CommonMethod/CreateTreeFromArray.cxx CommonMethod/CreateTreeFromArray.h CommonMethod/BasicMacro.h Tree/Solution530/Solution530.cxx Tree/Solution530/Solution530.h Array/Solution532/Solution532.cxx Array/Solution532/Solution532.h)