cmake_minimum_required(VERSION 3.9)
project(LeetCodeCLion)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCodeCLion main.cpp
        ClimbingStairs/070/Solution070.cxx ClimbingStairs/070/Solution070.h
        ClimbingStairs/746/Solution746.cxx ClimbingStairs/746/Solution746.h
        Math/Solution069/Solution069.cxx Math/Solution069/Solution069.h
        String/Solution788/Solution788.cxx String/Solution788/Solution788.h
        String/Solution784/Solution784.cxx String/Solution784/Solution784.h
        Tree/Solution783/Solution783.cxx Tree/Solution783/Solution783.h
        CommonObjects/TreeNode.h
        CommonObjects/Node.h
        CommonMethod/CreateTreeFromArray.cxx
        CommonMethod/CreateTreeFromArray.h
        CommonMethod/BasicMacro.h
        CommonMethod/Max.h CommonMethod/Max.cxx
        CommonMethod/Min.h
        Tree/Solution530/Solution530.cxx Tree/Solution530/Solution530.h
        Array/Solution532/Solution532.cxx Array/Solution532/Solution532.h
        Array/Solution045/Solution045.cxx Array/Solution045/Solution045.h
        Array/Solution128/Solution128.cxx Array/Solution128/Solution128.h
        Tree/Solution111/Solution111.cxx Tree/Solution111/Solution111.h
        Array/Solution695/Solution695.cxx Array/Solution695/Solution695.h
        Tree/Solution112/Solution112.cxx Tree/Solution112/Solution112.h
        Tree/Solution108/Solution108.cpp Tree/Solution108/Solution108.h
        Tree/Solution687/Solution687.cpp Tree/Solution687/Solution687.h
        Tree/Solution437/Solution437.cpp Tree/Solution437/Solution437.h
        Array/Solution167/Solution167.cpp Array/Solution167/Solution167.h
        Tree/Solution653/Solution653.cpp Tree/Solution653/Solution653.h
        Array/Solution795/Solution795.cpp Array/Solution795/Solution795.h
        String/Solution796/Solution796.cpp String/Solution796/Solution796.h
        String/Solution859/Solution859.h String/Solution859/Solution859.cpp
        Math/Solution858/Solution858.cpp Math/Solution858/Solution858.h
        Heap/Solution857/Solution857.cpp Heap/Solution857/Solution857.h
        Stack/Solution856/Solution856.cpp Stack/Solution856/Solution856.h
        Map/Solution855/Solution855.cpp Map/Solution855/Solution855.h
        String/Solution647/Solution647.cpp String/Solution647/Solution647.h
        Array/Solution412/Solution412.cpp Array/Solution412/Solution412.h
        String/Solution005/Solution005.cpp String/Solution005/Solution005.h
        String/Solution010/Solution010.cpp String/Solution010/Solution010.h
        String/Solution017/Solution017.cpp String/Solution017/Solution017.h
        DP/Solution322/Solution322.cpp DP/Solution322/Solution322.h
        Math/Solution029/Solution029.cpp Math/Solution029/Solution029.h
        BackTracking/Solution046/Solution046.cpp BackTracking/Solution046/Solution046.h
        String/Solution044/Solution044.cpp String/Solution044/Solution044.h
        BackTracking/Solution047/Solution047.cpp BackTracking/Solution047/Solution047.h
        Array/Solution860/Solution860.cpp Array/Solution860/Solution860.h
        Tree/Solution863/Solution863.cpp Tree/Solution863/Solution863.h
        String/Solution844/Solution844.cpp String/Solution844/Solution844.h
        Array/Solution852/Solution852.cpp Array/Solution852/Solution852.h
        Math/Solution050/Solution050.cpp Math/Solution050/Solution050.h
        Array/Solution055/Solution055.cpp Array/Solution055/Solution055.h
        DP/Solution303/Solution303.cpp DP/Solution303/Solution303.h
        DP/Solution338/Solution338.cpp DP/Solution338/Solution338.h
        DP/Solution413/Solution413.cpp DP/Solution413/Solution413.h
        Tree/Solution606/Solution606.cpp Tree/Solution606/Solution606.h
        Tree/Solution617/Solution617.cpp Tree/Solution617/Solution617.h
        Tree/Solution669/Solution669.cpp Tree/Solution669/Solution669.h
        Tree/Solution637/Solution637.cpp Tree/Solution637/Solution637.h
        Tree/Solution654/Solution654.cpp Tree/Solution654/Solution654.h
        Tree/Solution563/Solution563.cpp Tree/Solution563/Solution563.h
        Tree/Solution662/Solution662.cpp Tree/Solution662/Solution662.h
        Tree/Solution814/Solution814.cpp Tree/Solution814/Solution814.h
        Tree/Solution501/Solution501.cpp Tree/Solution501/Solution501.h
        Tree/Solution543/Solution543.cpp Tree/Solution543/Solution543.h
        Tree/Solution113/Solution113.cpp Tree/Solution113/Solution113.h
        Tree/Solution098/Solution098.cpp Tree/Solution098/Solution098.h
        Matrix/Solution868/Solution868.cpp Matrix/Solution868/Solution868.h
        Math/Solution867/Solution867.cpp Math/Solution867/Solution867.h
        Matrix/Solution832/Solution832.cpp Matrix/Solution832/Solution832.h
        Matrix/Solution861/Solution861.cpp Matrix/Solution861/Solution861.h
        String/Solution387/Solution387.cpp String/Solution387/Solution387.h
        Array/Solution384/Solution384.cpp Array/Solution384/Solution384.h
        Math/Solution371/Solution371.cpp Math/Solution371/Solution371.h
        Array/Solution238/Solution238.cpp Array/Solution238/Solution238.h
        BinarySearch/Solution378/Solution378.cpp BinarySearch/Solution378/Solution378.h
        Tree/Solution230/Solution230.cpp Tree/Solution230/Solution230.h
        Array/Solution287/Solution287.cpp Array/Solution287/Solution287.h
        Math/Solution372/Solution372.cpp Math/Solution372/Solution372.h
        BinarySearch/Solution704/Solution704.cpp BinarySearch/Solution704/Solution704.h
        Geometry/Solution587.cpp Geometry/Solution587.h
        Random/Solution872/Solution872.cpp Random/Solution872/Solution872.h
        Greedy/Solution870/Solution870.cpp Greedy/Solution870/Solution870.h
        Math/Solution869/Solution869.cpp Math/Solution869/Solution869.h
        Math/Solution868/Solution868.cpp Math/Solution868/Solution868.h
        BinarySearch/Solution875/Solution875.cpp BinarySearch/Solution875/Solution875.h
        Array/Solution287/Solution287.cpp Array/Solution287/Solution287.h
        Tree/Solution872/Solution872.cpp Tree/Solution872/Solution872.h
        Tree/Solution129/Solution129.cpp Tree/Solution129/Solution129.h
        Tree/Solution095/Solution095.cpp Tree/Solution095/Solution095.h
        Tree/Solution096/Solution096.cpp Tree/Solution096/Solution096.h
        Tree/Solution889/Solution889.cpp Tree/Solution889/Solution889.h
        Tree/Solution894/Solution894.cpp Tree/Solution894/Solution894.h
        Tree/Solution559/Solution559.cpp Tree/Solution559/Solution559.h
        Tree/Solution429/Solution429.cpp Tree/Solution429/Solution429.h
        Tree/Solution589/Solution589.cpp Tree/Solution589/Solution589.h
        Tree/Solution590/Solution590.cpp Tree/Solution590/Solution590.h
        Tree/Solution700/Solution700.cpp Tree/Solution700/Solution700.h
        Tree/Solution701/Solution701.cpp Tree/Solution701/Solution701.h
        Tree/Solution865/Solution865.cpp Tree/Solution865/Solution865.h
        Tree/Solution671/Solution671.cpp Tree/Solution671/Solution671.h
        Tree/Solution684/Solution684.cpp Tree/Solution684/Solution684.h
        Tree/Solution538/Solution538.cpp Tree/Solution538/Solution538.h
        Tree/Solution404/Solution404.cpp Tree/Solution404/Solution404.h
        Tree/Solution572/Solution572.cpp Tree/Solution572/Solution572.h
        Tree/Solution513/Solution513.cpp Tree/Solution513/Solution513.h
        Tree/Solution515/Solution515.cpp Tree/Solution515/Solution515.h
        Tree/Solution508/Solution508.cpp Tree/Solution508/Solution508.h
        Tree/Solution199/Solution199.cpp Tree/Solution199/Solution199.h
        Sort/Solution905/Solution905.cpp Sort/Solution905/Solution905.h
        Array/Solution904/Solution904.cpp Array/Solution904/Solution904.h
        Array/Solution881/Solution881.cpp Array/Solution881/Solution881.h
        Matrix/Solution807/Solution807.cpp Matrix/Solution807/Solution807.h
        String/Solution709/Solution709.cpp String/Solution709/Solution709.h
        Map/Solution535/Solution535.cpp Map/Solution535/Solution535.h
        String/Solution890/Solution890.cpp String/Solution890/Solution890.h
        DFS/Solution797/Solution797.cpp DFS/Solution797/Solution797.h
        Map/Solution554/Solution554.cpp Map/Solution554/Solution554.h
        Map/Solution895/Solution895.cpp Map/Solution895/Solution895.h
        Map/Solution781/Solution781.cpp Map/Solution781/Solution781.h
        Map/Solution299/Solution299.cpp Map/Solution299/Solution299.h)
